<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sevenga Trans</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="receive_canceled">canceled</string>
    <string name="sdcard_unavailable">sdcard unavailable</string>
    <string name="receive_cannot_created_file">create file failed</string>
    <string name="error_transmit">transmit error</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="main_send">Send</string>
    <string name="main_receive">Receive</string>
    <string name="main_share">Share Trans to your friends</string>
    <string name="share_title">Share Zero Flow</string>
    <string name="share_zero_flow">Open zero Share</string>
    <string name="share_zero_flow_url">zero flow url</string>
    <string name="share_by_bluetooth">By Bluetooth</string>
    <string name="send_title">Send</string>
    <string name="send_continue">Continue</string>
    <string name="send_finish">Finish</string>
    <string name="receive_title">Receive</string>
    <string name="receive_finish">Finish</string>
    <string name="receive_wait">waiting for receive</string>
    <string name="receive_picker_title">Select a receiver</string>
    <string name="search_wait">Wait a moment,\nTrans is searching receivers</string>
    <string name="touch_to_pick">Touch to select a receiver</string>
    <string name="select_title">Select To Send</string>
    <string name="select_selected">Selected</string>
    <string name="select_send">Send</string>
    <string name="record_cancel">Cancel</string>
    <string name="record_open">open</string>
    <string name="record_failed">failed</string>
    <string name="app_search_text">input search content</string>
    <string name="app_search">Search</string>
    <string name="history_title">History</string>
    <string name="history_clear">Clear</string>
    <string name="desc">ImageView</string>
    <string name="receiver_picker_tip">Touch the name to Select</string>

</resources>