<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/sharetitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/common_background" >

        <Button
            android:id="@+id/shareback"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/share_title"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_by_zero"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/sharetitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/selector_main"
        android:text="@string/share_zero_flow"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/zerosharetextView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/button_by_zero"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@color/common_background"
        android:gravity="center"
        android:text="@string/share_zero_flow_url"
        android:textColor="#8B0000" >
    </TextView>

    <Button
        android:id="@+id/button_by_bluetooth"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/zerosharetextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/selector_main"
        android:text="@string/share_by_bluetooth"
        android:textSize="20sp" />

</RelativeLayout>