<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/common_background" >

    <RelativeLayout
        android:id="@+id/maintitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/common_background" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainTop"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_below="@id/maintitle"
        android:background="@drawable/main_title" >

        <ImageView
            android:id="@+id/userimage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/user_icon" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignTop="@+id/userimage"
            android:layout_marginLeft="31dp"
            android:layout_toRightOf="@+id/userimage"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp" />

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/userimage"
            android:layout_alignLeft="@+id/username"
            android:background="@drawable/shape"
            android:padding="5dp"
            android:text="@string/main_share"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/main_send"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mainTop"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/selector_main"
        android:text="@string/main_send"
        android:textSize="20sp" />

    <Button
        android:id="@+id/main_receive"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/main_send"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/selector_main"
        android:text="@string/main_receive"
        android:textSize="20sp" />

    <Button
        android:id="@+id/history"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/main_send"
        android:layout_marginBottom="30dp"
        android:background="@drawable/selector_main"
        android:padding="5dp"
        android:text="History" 
        android:textSize="14sp"/>

</RelativeLayout>