<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/send"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE6ECEF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/common_background" >

        <Button
            android:id="@+id/send_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/send_title"
            android:textSize="20sp" />
    </RelativeLayout>

    <fragment
        android:name="com.plusend.components.records.RecordFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/common_background"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/send_continue"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:gravity="center"
            android:text="@string/send_continue"
            android:textSize="20sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#000000" />

        <Button
            android:id="@+id/send_finish"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:gravity="center"
            android:text="@string/send_finish"
            android:textSize="20sp" />
    </LinearLayout>

</FrameLayout>