<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout 
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:background="@color/common_background">
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/select_title"/>

        <Button
            android:id="@+id/sendselect_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back"
            android:gravity="center_vertical" />

    </RelativeLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" >

        <android.support.v4.view.PagerTabStrip
            android:id="@+id/select_activity_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top" />
    </android.support.v4.view.ViewPager>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/common_background"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/selectSelected"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:gravity="center"
            android:text="@string/select_selected"
            android:textSize="20sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#000000" />

        <Button
            android:id="@+id/selectSend"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:gravity="center"
            android:text="@string/select_send"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>